@@ -13,6 +13,7 @@ $gettext->reset();
 <a href="listusers.php"><?=$gettext->gettext("User Management")?></a>
 <a href="listgroups.php"><?=$gettext->gettext("Group Management")?></a>
 <a href="adminlog.php"><?=$gettext->gettext("Admin Log")?></a>
+<a href="editprefs.php"><?=$gettext->gettext("User Preferences")?></a>
 <a href="../index.php" target="_new"><?=$gettext->gettext("Show Site")?></a>
 <a href="logout.php"><?=$gettext->gettext("Logout")?></a>
 </div> 
